; ModuleID = '/home/carl/AnghaBench/kphp-kdb/news/extr_news-data.c_check_split.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/news/extr_news-data.c_check_split.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@log_split_mod = common dso_local global i32 0, align 4
@log_split_min = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @check_split(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = icmp sgt i32 %3, 0
  br i1 %4, label %5, label %12

5:                                                ; preds = %1
  %6 = load i32, i32* %2, align 4
  %7 = load i32, i32* @log_split_mod, align 4
  %8 = srem i32 %6, %7
  %9 = load i32, i32* @log_split_min, align 4
  %10 = icmp eq i32 %8, %9
  %11 = zext i1 %10 to i32
  br label %20

12:                                               ; preds = %1
  %13 = load i32, i32* %2, align 4
  %14 = sub nsw i32 0, %13
  %15 = load i32, i32* @log_split_mod, align 4
  %16 = srem i32 %14, %15
  %17 = load i32, i32* @log_split_min, align 4
  %18 = icmp eq i32 %16, %17
  %19 = zext i1 %18 to i32
  br label %20

20:                                               ; preds = %12, %5
  %21 = phi i32 [ %11, %5 ], [ %19, %12 ]
  ret i32 %21
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
